emby/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
        config.cupdate/stay-on-current-major: "true"
    spec:
      securityContext:
        fsGroup: 3001
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: emby-vol
          persistentVolumeClaim:
            claimName: emby
      containers:
      - name: emby
        image: lscr.io/linuxserver/emby:4.9.5
        resources:
          requests:
            cpu: 15m
            memory: 500M
          limits:
            cpu: 2000m
            memory: 2000M
        volumeMounts:
          - name: emby-vol
            mountPath: /config
            subPath: config
          - name: emby-vol
            mountPath: /data/movies
            subPath: data/movies
          - name: emby-vol
            mountPath: /data/tvshows
            subPath: data/tvshows
          - name: emby-vol
            mountPath: /data/anime
            subPath: data/anime
          - name: emby-vol
            mountPath: /data/animemovies
            subPath: data/animemovies
          - name: emby-vol
            mountPath: /data/music
            subPath: data/music
        ports:
          - containerPort: 8096
          - containerPort: 8920
---
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: media
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8096
    name: http
  selector:
    app: emby
---
